# Ishiiruka

./: .clang_complete  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Readme.md  build-appimage.sh  build-linux.sh  build-mac.sh  build-online-appimage.sh  create_patch.bat  default.nix  rust-toolchain.toml  slippi-appimage-wrapper  tatus
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ccpp.yml  main.yml  pr-build.yml  release.yml
CMakeTests/: FindMbedTLS.cmake
Data/: dolphin-emu.desktop  install_smashenabler.sh  linux-env.sh  traversal_server
Data/Config/: Dolphin.ini
Data/PlaybackGeckoCodes/: GALE01r2.ini  GALJ01r2.ini
Data/Sys/: bootloader.gct
Data/Sys/GameSettings/: GALE01r2.ini  GALEXX.ini  GALJ01r2.ini  GTME01.ini
Data/User/GameSettings/: GALJ01r2.ini  GTME01.ini
Languages/: Languages.vcxproj
Overwrite/Sys/GameSettings/: GALE01r2.ini  GALEXX.ini  GALJ01r2.ini  GTME01.ini
Overwrite/User/Config/: Dolphin.ini
Source/: Dolphin.sln  UpgradeLog.htm
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: Mixer.h  (+13 more)
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp
Source/DSPTool/: DSPTool.vcxproj
Source/Debug/: semver.ilk
Source/PCH/: pch.vcxproj
Source/VSProps/: Base.props  QtCompile.props
Tools/: deploy-mac.py  lint.sh  load-macos-certs-ci.sh  notarize-macos-netplay.sh  notarize_netplay.sh  start-ngrok-debugger.sh
docs/: codehandler.mk  codehandler.s
exports/: cubeb_export.h
nix/: USAGE.md  slippi.nix  sources.json
(+354 files in other folders)
